tests/baselines/reference/covariance1.errors.txt
covariance1.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== covariance1.ts (1 errors) ====
    module M {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    
        interface X { m1:number; }
        export class XX implements X { constructor(public m1:number) { } }
    
        interface Y { x:X; }
    
        export function f(y:Y) { }
    
        var a:X;
        f({x:a}); // ok
    
        var b:XX;
        f({x:b}); // ok covariant subtype
    }
    
    